--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
+    "vuetify-toast-snackbar": "^0.6.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
